Update recording scripts